--- a/makefile.dep
+++ b/makefile.dep
@@ -2,13 +2,13 @@ bin/base.o: base.cpp base.h
 bin/map.o: map.cpp map.h declaration.h base.h player.h object.h renderer.h \
  block.h
 bin/player.o: player.cpp player.h declaration.h object.h base.h map.h \
- renderer.h block.h
+ renderer.h block.h exception.h
 bin/renderer.o: renderer.cpp renderer.h declaration.h exception.h
 bin/cursor.o: cursor.cpp cursor.h declaration.h renderer.h
 bin/block.o: block.cpp block.h base.h declaration.h object.h renderer.h
-bin/event.o: event.cpp main.h exception.h cursor.h declaration.h map.h base.h \
+bin/event.o: event.cpp main.h exception.h declaration.h cursor.h map.h base.h \
  player.h object.h renderer.h
-bin/main.o: main.cpp main.h exception.h cursor.h declaration.h map.h base.h \
+bin/main.o: main.cpp main.h exception.h declaration.h cursor.h map.h base.h \
  player.h object.h renderer.h
-bin/object.o: object.cpp object.h declaration.h base.h map.h block.h \
- renderer.h
+bin/object.o: object.cpp main.h exception.h declaration.h cursor.h object.h \
+ base.h map.h block.h renderer.h
